{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 12,
  "lineage": "f9f5b925-7e62-a71b-74a3-1f4f7a1da7ec",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:476042145611:network-acl/acl-020e7e96a578e911a",
            "default_network_acl_id": "acl-020e7e96a578e911a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-020e7e96a578e911a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "476042145611",
            "subnet_ids": [
              "subnet-070f99815dd60f6b0",
              "subnet-0863d3cd84ce9b72e"
            ],
            "tags": {
              "Name": "gym-finance-vpc-default",
              "Project": "gym-finance"
            },
            "tags_all": {
              "Name": "gym-finance-vpc-default",
              "Project": "gym-finance"
            },
            "vpc_id": "vpc-07747b184594f3cd3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:476042145611:route-table/rtb-06dd5d5385205704c",
            "default_route_table_id": "rtb-06dd5d5385205704c",
            "id": "rtb-06dd5d5385205704c",
            "owner_id": "476042145611",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "gym-finance-vpc-default",
              "Project": "gym-finance"
            },
            "tags_all": {
              "Name": "gym-finance-vpc-default",
              "Project": "gym-finance"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-07747b184594f3cd3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:476042145611:security-group/sg-0fa4720e148fea416",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0fa4720e148fea416",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "476042145611",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gym-finance-vpc-default",
              "Project": "gym-finance"
            },
            "tags_all": {
              "Name": "gym-finance-vpc-default",
              "Project": "gym-finance"
            },
            "vpc_id": "vpc-07747b184594f3cd3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:476042145611:internet-gateway/igw-016efc3e3e07be13c",
            "id": "igw-016efc3e3e07be13c",
            "owner_id": "476042145611",
            "tags": {
              "Name": "gym-finance-vpc",
              "Project": "gym-finance"
            },
            "tags_all": {
              "Name": "gym-finance-vpc",
              "Project": "gym-finance"
            },
            "vpc_id": "vpc-07747b184594f3cd3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-016efc3e3e07be13c",
            "id": "r-rtb-074495ef20b7830f91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-074495ef20b7830f9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:476042145611:route-table/rtb-074495ef20b7830f9",
            "id": "rtb-074495ef20b7830f9",
            "owner_id": "476042145611",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "gym-finance-vpc-public",
              "Project": "gym-finance"
            },
            "tags_all": {
              "Name": "gym-finance-vpc-public",
              "Project": "gym-finance"
            },
            "timeouts": null,
            "vpc_id": "vpc-07747b184594f3cd3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f2084db24f1ea70",
            "route_table_id": "rtb-074495ef20b7830f9",
            "subnet_id": "subnet-070f99815dd60f6b0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007ad6f8d0da2c1e7",
            "route_table_id": "rtb-074495ef20b7830f9",
            "subnet_id": "subnet-0863d3cd84ce9b72e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:476042145611:subnet/subnet-070f99815dd60f6b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070f99815dd60f6b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "476042145611",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gym-finance-vpc-public-eu-west-2a",
              "Project": "gym-finance"
            },
            "tags_all": {
              "Name": "gym-finance-vpc-public-eu-west-2a",
              "Project": "gym-finance"
            },
            "vpc_id": "vpc-07747b184594f3cd3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:476042145611:subnet/subnet-0863d3cd84ce9b72e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0863d3cd84ce9b72e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "476042145611",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gym-finance-vpc-public-eu-west-2b",
              "Project": "gym-finance"
            },
            "tags_all": {
              "Name": "gym-finance-vpc-public-eu-west-2b",
              "Project": "gym-finance"
            },
            "vpc_id": "vpc-07747b184594f3cd3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:476042145611:vpc/vpc-07747b184594f3cd3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-020e7e96a578e911a",
            "default_route_table_id": "rtb-06dd5d5385205704c",
            "default_security_group_id": "sg-0fa4720e148fea416",
            "dhcp_options_id": "dopt-096858d2ac76f96d6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07747b184594f3cd3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06dd5d5385205704c",
            "owner_id": "476042145611",
            "tags": {
              "Name": "gym-finance-vpc",
              "Project": "gym-finance"
            },
            "tags_all": {
              "Name": "gym-finance-vpc",
              "Project": "gym-finance"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}